# pinata-test

./: CMakeLists.txt  bokeh.cpp  input.avi  main.cpp
opencv/lib/: libopencv_aruco.so.4.2.0  libopencv_bgsegm.so.4.2.0  libopencv_bioinspired.so.4.2.0  libopencv_calib3d.so.4.2.0  libopencv_ccalib.so.4.2.0  libopencv_datasets.so.4.2.0  libopencv_dnn_objdetect.so.4.2.0  libopencv_dnn_superres.so.4.2.0  libopencv_dpm.so.4.2.0  libopencv_face.so.4.2.0  libopencv_flann.so.4.2.0  libopencv_fuzzy.so.4.2.0  libopencv_highgui.so.4.2.0  libopencv_line_descriptor.so.4.2.0  libopencv_ml.so.4.2.0  libopencv_objdetect.so.4.2.0  libopencv_optflow.so.4.2.0  libopencv_phase_unwrapping.so.4.2.0  libopencv_rapid.so.4.2.0  libopencv_rgbd.so.4.2.0  libopencv_saliency.so.4.2.0  libopencv_shape.so.4.2.0  libopencv_stereo.so.4.2.0  libopencv_stitching.so.4.2.0  libopencv_structured_light.so.4.2.0  libopencv_superres.so.4.2.0  libopencv_surface_matching.so.4.2.0  libopencv_text.so.4.2.0  libopencv_tracking.so.4.2.0  libopencv_video.so.4.2.0  libopencv_videoio.so.4.2.0  libopencv_videostab.so.4.2.0  libopencv_xfeatures2d.so.4.2.0  libopencv_ximgproc.so.4.2.0  libopencv_xobjdetect.so.4.2.0  libopencv_xphoto.so.4.2.0
